--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node index.js",
+    "seed": "node ./db/seed.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "inquirer": "^8.2.6"
+    "inquirer": "^8.2.6",
+    "mysql2": "^3.8.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.0",
     "faker": "^6.6.6"
   }
 }
