--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "seed": "node ./db/seed.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cli-table3": "^0.6.3",
     "express": "^4.18.2",
     "inquirer": "^8.2.6",
-    "mysql2": "^3.8.0"
+    "mysql2": "^3.8.0",
+    "table": "^6.8.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.0",
